# Optimial-Controller

./: CMakeLists.txt
example/: FuzzyLogic_Example.cpp  LQG_Example.cpp  LQR_Example.cpp  MPC_Example.cpp  PID_Example.cpp
include/: FuzzyLogic.h  LQG.h  LQR.h  MPC.h  Matrix.h  PID.h  StateSpaceModel.h
source/: FuzzyLogic.cpp  LQG.cpp  LQR.cpp  MPC.cpp  PID.cpp  StateSpaceModel.cpp
test/: PID_Test.cpp
